--- a/en.lproj/Main.storyboard
+++ b/en.lproj/Main.storyboard
@@ -73,10 +73,10 @@
             </objects>
             <point key="canvasLocation" x="1147" y="-122"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="Tna-Ye-D1e">
             <objects>
-                <viewController id="p4z-Ze-HAD" sceneMemberID="viewController">
+                <viewController id="p4z-Ze-HAD" customClass="SettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="O95-L9-qeD"/>
                         <viewControllerLayoutGuide type="bottom" id="s5R-Jm-GeI"/>
@@ -91,12 +91,25 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="myR-pt-qMm">
+                                <rect key="frame" x="218" y="130" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="save:" destination="p4z-Ze-HAD" eventType="touchDown" id="apS-Cn-5mc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="52c-HN-UE5"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="phone" destination="LeX-eD-pUK" id="984-X6-id0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mhh-8Q-j68" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
