--- a/en.lproj/Main.storyboard
+++ b/en.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="I4y-7z-Sgg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="I4y-7z-Sgg">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -51,6 +51,10 @@
                                     <action selector="start:" destination="3dT-lI-jKW" eventType="editingDidEnd" id="nFt-qA-z2s"/>
                                 </connections>
                             </textField>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YNR-db-4XN">
+                                <rect key="frame" x="73" y="142" width="175" height="2"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -76,6 +80,7 @@
                         <outlet property="outputLabel" destination="8lU-1P-grW" id="dBx-aP-sSu"/>
                         <outlet property="phoneNumberField" destination="6ZD-x1-Pub" id="11Q-df-uAG"/>
                         <outlet property="startButton" destination="T7R-9K-hEp" id="nIs-IY-tf8"/>
+                        <outlet property="volumeIndicator" destination="YNR-db-4XN" id="ZPz-cO-krR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2lQ-D7-YwO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -107,6 +112,13 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nhP-Kb-p0g">
+                                <rect key="frame" x="24" y="248" width="284" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="valueChanged:" destination="p4z-Ze-HAD" eventType="valueChanged" id="0ox-Tt-ndD"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -122,6 +134,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="phone" destination="LeX-eD-pUK" id="984-X6-id0"/>
+                        <outlet property="treshholdSlider" destination="nhP-Kb-p0g" id="fx0-9X-dmE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mhh-8Q-j68" userLabel="First Responder" sceneMemberID="firstResponder"/>
